Add Some Section

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     <div class="pro-wrap">
                         <a href="#">
                             <div class="img">
-                                <img src="img/project-01.jpg" alt="">
+                                <img src="img/project/project-03.jpg" alt="">
                             </div>
                             <div class="text">
                                 <div class="flex">
@@ -202,13 +202,13 @@
                     <div class="pro-wrap">
                         <a href="#">
                             <div class="img">
-                                <img src="img/project-02.jpg" alt="">
+                                <img src="img/project/project-05.jpg" alt="">
                             </div>
                             <div class="text">
                                 <div class="flex">
                                     <div class="txt">
-                                        <h3>Salesforece</h3>
-                                        <p>Software development</p>
+                                        <h3>Expense Manager & Budget Planner</h3>
+                                        <p>Mobile Application Development</p>
                                     </div>
                                     <div class="icons">
                                         <div class="icn"><i class="fa-solid fa-arrow-right"></i></div>
@@ -222,7 +222,7 @@
                     <div class="pro-wrap mar-top">
                         <a href="#">
                             <div class="img">
-                                <img src="img/project-03.jpg" alt="">
+                                <img src="img/project/project-01.jpg" alt="">
                             </div>
                             <div class="text">
                                 <div class="flex">
@@ -240,13 +240,13 @@
                     <div class="pro-wrap">
                         <a href="#">
                             <div class="img">
-                                <img src="img/project-04.jpg" alt="">
+                                <img src="img/project/project-02.jpg" alt="">
                             </div>
                             <div class="text">
                                 <div class="flex">
                                     <div class="txt">
-                                        <h3>Insatacart</h3>
-                                        <p>Branding UI/UX Designing</p>
+                                        <h3>Child Care Clinic</h3>
+                                        <p>Desktop Application Software</p>
                                     </div>
                                     <div class="icons">
                                         <div class="icn"><i class="fa-solid fa-arrow-right"></i></div>
@@ -258,11 +258,144 @@
                 </div>
             </div>
             <div class="more-btn text-center">
-                <a href="#" class="btn btn-outline">See More Work<span><i class="fa-solid fa-arrow-right"></i></span></a>
+                <a href="#" class="btn btn-outline">See More Work<span><i
+                            class="fa-solid fa-arrow-right"></i></span></a>
             </div>
         </div>
     </section>
     <!-- ---- End Project ---  -->
+
+    <section class="expertise">
+        <div class="title_sec cnt-lg">
+            <h2>Our Expertise</h2>
+        </div>
+        <div class="container">
+            <div class="expert-wrap flex">
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-01.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Andriod</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-02.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>HCL <br>
+                            Ecommerce</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-03.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Shopify</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-04.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Node JS</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-05.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>AWS</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-06.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>React Native</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-07.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Flutter </h6>
+                    </div>
+                </div>
+                
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-08.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Spring MVC</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-09.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Spring Boot</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-10.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>PHP</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-11.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>JAVA</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-12.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>HTML</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-13.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>CSS</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-14.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Next JS</h6>
+                    </div>
+                </div>
+                <div class="expert-info">
+                    <div class="img">
+                        <img src="img/icons/exp-15.svg" alt="">
+                    </div>
+                    <div class="txt">
+                        <h6>Wordpress</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- ---- Start Work ----  -->
     <section class="work">
