Add Some Section

--- a/contact-us.html
+++ b/contact-us.html
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/logo.png" class="img-fluid" alt="">
+                    <img src="img/logo.svg" class="img-fluid" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -226,6 +226,11 @@
 
     <section class="inset_logo">
         <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-7">
+                    <h2>We worked with the world’s biggest brands and the most <span>innovative startups</span></h2>
+                </div>
+            </div>
             <div class="flex img justify-content-center">
                 <img src="img/logo/lg-01.png" alt="">
                 <img src="img/logo/lg-02.png" alt="">
@@ -262,7 +267,7 @@
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
                         <div class="img">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/logo.svg" alt="">
                         </div>
                     </div>
                     <div class="menu-list">
