--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
                         <div class="img">
-                            <img src="img/logo.png" alt="">
+                            <img src="img/logo.svg" alt="">
                         </div>
                     </div>
                     <div class="menu-list">
