Add Some Section

--- a/contact-us.html
+++ b/contact-us.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="about-us.html">About Us</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
@@ -224,6 +224,7 @@
     </section>
     <!-- ---- End team ----  -->
 
+    <!-- ---inset_logo---  -->
     <section class="inset_logo">
         <div class="container">
             <div class="row justify-content-center">
@@ -241,6 +242,7 @@
             </div>
         </div>
     </section>
+    <!-- ---inset_logo---  -->
 
     <!-- ---- start footer ----  -->
     <footer>
