--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link" href="about-us.html">About Us</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
