Add Some Section

--- a/about-us.html
+++ b/about-us.html
@@ -70,7 +70,7 @@
     <section class="about-hero">
         <div class="container title_sec">
             <div class="row justify-content-center">
-                <div class="col-lg-7">
+                <div class="col-xxl-8 col-lg-10">
                     <h6>About Us</h6>
                     <h2>We Solve Globally Viable Business Solutions</h2>
                 </div>
@@ -204,7 +204,7 @@
     <section class="team ">
         <div class="cnt-lg">
             <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <div class="title_sec text-center mar-btm">
                         <h6>Our Management</h6>
                         <h2>A Hard working and professional team </h2>
@@ -320,7 +320,7 @@
             </div>
         </div>
         <div class="cnt-lg">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-4">
 
                     <div class="choose-info">
