--- a/contact-us.html
+++ b/contact-us.html
@@ -225,7 +225,7 @@
     <!-- ---- End team ----  -->
 
     <!-- ---inset_logo---  -->
-    <section class="inset_logo">
+    <section class="inset_logo d-none">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7">
@@ -243,6 +243,21 @@
         </div>
     </section>
     <!-- ---inset_logo---  -->
+
+    <section class="growth ">
+        <div class="container">
+            <div class="growth-wrap flex">
+                <div class="txt">
+                    <h6>Get in touch</h6>
+                    <h4>Rescue your company’s growth!</h4>
+                    <p>Let us know about your business plans on an introductory call, and we’ll lead the matching process.</p>
+                </div>
+                <div class="grow-btn">
+                    <a href="#" class="btn">Free Consultation</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- ---- start footer ----  -->
     <footer>
