--- a/service.html
+++ b/service.html
@@ -95,7 +95,7 @@
         <div class="cnt-lg">
             <div class="title_sec">
                 <h3>Our services</h3>
-                <h2>When it comes to innovation, the digital route is the way to go</h2>
+                <h2>The Better Path to Success for Your Business</h2>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
