Add Some Section

--- a/contact-us.html
+++ b/contact-us.html
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="service.html">Sevices</a>
@@ -58,7 +58,7 @@
                         </li> -->
                     </ul>
                     <div class="d-flex">
-                        <a href="contact-us.html" class="btn">Contact us</a>
+                        <a href="contact-us.html" class="btn active">Contact us</a>
                     </div>
                 </div>
             </div>
@@ -142,10 +142,10 @@
                             </div>
                             <div class="txt">
                                 <p>have a project in mind? send a message.</p>
-                                <a href="mailto:info@examples.com">info@examples.com</a>
+                                <a href="mailto:info@examples.com">info@apex.com</a>
                             </div>
                         </div>
-                        <div class="detail-wrap flex">
+                        <div class="detail-wrap flex d-none">
                             <div class="icon">
                                 <img src="img/icons/phone.svg" alt="">
                             </div>
@@ -163,7 +163,7 @@
 
 
     <!-- ---- Start team ----  -->
-    <section class="team ">
+    <section class="team d-none">
         <div class="cnt-lg">
             <div class="row">
                 <div class="col-lg-8">
@@ -252,7 +252,7 @@
                     <p>Let us know about your business plans on an introductory call, and we’ll lead the matching process.</p>
                 </div>
                 <div class="grow-btn">
-                    <a href="#" class="btn">Free Consultation</a>
+                    <a href="contact-us.html" class="btn">Free Consultation</a>
                 </div>
             </div>
         </div>
@@ -266,14 +266,14 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                        <a href="contact-us.html" class="btn btn-white"><span>Let's talk</span> <span><i
                                     class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
@@ -282,22 +282,22 @@
             <div class="footer-bottom">
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
-                        <div class="img">
+                        <a href="index.html" class="img">
                             <img src="img/logo.svg" alt="">
-                        </div>
+                        </a>
                     </div>
                     <div class="menu-list">
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="project.html">Projects</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <!-- <li><a href="#">FAQs</a></li> -->
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="numb">
                         <p><img src="img/icons/circle.svg" alt="">
-                            +23323137347632
+                            info@apex.com
                         </p>
                     </div>
                 </div>
