--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 services. Our solutions leverage cutting-edge Cloud, AI, Big Data, and Mobile
                                 technologies to boost efficiency, drive innovation, and increase agility across a range
                                 of industries and business verticals.</p>
-                            <a href="#" class="btn btn-outline-wht">Get started <span><i
+                            <a href="contact-us.html" class="btn btn-outline-wht">Get started <span><i
                                         class="fa-solid fa-arrow-right"></i></span></a>
                         </div>
                     </div>
@@ -153,9 +153,6 @@
                     </div>
                 </div>
             </div>
-            <div class="more-btn text-center">
-                <a href="#" class="btn btn-outline">Find More <span><i class="fa-solid fa-arrow-right"></i></span></a>
-            </div>
         </div>
     </section>
     <!-- ---- End our services ----  -->
@@ -173,7 +170,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="see-more">
-                        <a href="#" class="btn">See More Work <span><i class="fa-solid fa-arrow-right"></i></span></a>
+                        <a href="project.html" class="btn">See More Work <span><i class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                 </div>
             </div>
@@ -254,10 +251,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="more-btn text-center">
-                <a href="#" class="btn btn-outline">See More Work<span><i
-                            class="fa-solid fa-arrow-right"></i></span></a>
             </div>
         </div>
     </section>
@@ -450,7 +443,7 @@
     <!-- ---- End Work ----  -->
 
     <!-- ---- start deal ----  -->
-    <section class="deal">
+    <section class="deal d-none">
         <div class="cnt-lg">
             <div class="title_sec">
                 <h2>Numbers that seal the <span>deal</span></h2>
@@ -561,14 +554,14 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                        <a href="contact-us.html" class="btn btn-white"><span>Let's talk</span> <span><i
                                     class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
@@ -577,22 +570,22 @@
             <div class="footer-bottom">
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
-                        <div class="img">
+                        <a href="index.html" class="img">
                             <img src="img/logo.svg" alt="">
-                        </div>
+                        </a>
                     </div>
                     <div class="menu-list">
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="project.html">Projects</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <!-- <li><a href="#">FAQs</a></li> -->
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="numb">
                         <p><img src="img/icons/circle.svg" alt="">
-                            +23323137347632
+                            info@apex.com
                         </p>
                     </div>
                 </div>
