--- a/project.html
+++ b/project.html
@@ -42,13 +42,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="service.html">Sevices</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="project.html">Projects</a>
+                            <a class="nav-link active" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about-us.html">About Us</a>
@@ -81,10 +81,6 @@
     <!-- ---- Start Project Tabs---  -->
     <section class="project project-tabs">
         <div class="cnt-lg">
-            <div class="see-more">
-                <div class="scroll-down d-flex justify-content-end align-items-center">Scroll down to Explore <span><i
-                            class="fa-solid fa-arrow-down"></i></span></div>
-            </div>
             <div class="tabs-wrap">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -914,7 +910,7 @@
                         Lets start it together</h2>
                     <p>Apex can help you build and grow in the best possible way, Get in touch with the <span>
                     best world-class software team right away!</span></p>
-                        <a href="#" class="btn">Lets Talk <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
+                        <a href="contact-us.html" class="btn">Lets Talk <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
                 </div>
             </div>
         </div>
@@ -929,14 +925,14 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                        <a href="contact-us.html" class="btn btn-white"><span>Let's talk</span> <span><i
                                     class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
@@ -945,22 +941,22 @@
             <div class="footer-bottom">
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
-                        <div class="img">
+                        <a href="index.html" class="img">
                             <img src="img/logo.svg" alt="">
-                        </div>
+                        </a>
                     </div>
                     <div class="menu-list">
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="project.html">Projects</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <!-- <li><a href="#">FAQs</a></li> -->
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="numb">
                         <p><img src="img/icons/circle.svg" alt="">
-                            +23323137347632
+                            info@apex.com
                         </p>
                     </div>
                 </div>
