--- a/service.html
+++ b/service.html
@@ -42,10 +42,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="service.html">Sevices</a>
+                            <a class="nav-link active" href="service.html">Sevices</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="project.html">Projects</a>
@@ -74,7 +74,7 @@
                         <div class="text">
                             <p>We provide an extensive range of services, taking your business from an idea straight
                                 through to a result both client and staff can be proud of.</p>
-                            <a href="#" class="btn btn-white"><span>Know all services</span> <span><i
+                            <a href="#services" class="btn btn-white"><span>Know all services</span> <span><i
                                         class="fa-solid fa-arrow-down"></i></span></a>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
     </section>
 
     <!-- ---- Start our services ----  -->
-    <section class="service">
+    <section class="service" id="services">
         <div class="cnt-lg">
             <div class="title_sec">
                 <h3>Our services</h3>
@@ -157,9 +157,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="more-btn text-center">
-                <a href="#" class="btn btn-outline">Find More <span><i class="fa-solid fa-arrow-right"></i></span></a>
             </div>
         </div>
     </section>
@@ -366,14 +363,14 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                        <a href="contact-us.html" class="btn btn-white"><span>Let's talk</span> <span><i
                                     class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
@@ -382,22 +379,22 @@
             <div class="footer-bottom">
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
-                        <div class="img">
+                        <a href="index.html" class="img">
                             <img src="img/logo.svg" alt="">
-                        </div>
+                        </a>
                     </div>
                     <div class="menu-list">
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="project.html">Projects</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <!-- <li><a href="#">FAQs</a></li> -->
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="numb">
                         <p><img src="img/icons/circle.svg" alt="">
-                            +23323137347632
+                            info@apex.com
                         </p>
                     </div>
                 </div>
