--- a/about-us.html
+++ b/about-us.html
@@ -42,7 +42,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="service.html">Sevices</a>
@@ -51,7 +51,7 @@
                             <a class="nav-link" href="project.html">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about-us.html">About Us</a>
+                            <a class="nav-link active" href="about-us.html">About Us</a>
                         </li>
                         <!-- <li class="nav-item">
                             <a class="nav-link" href="#">FAQs</a>
@@ -125,7 +125,7 @@
 
 
     <!-- ---- start deal core-value ----  -->
-    <section class="deal core-value">
+    <section class="deal core-value d-none">
         <div class="container">
             <div class="row title_sec justify-content-center text-center">
                 <div class="col-lg-10">
@@ -200,7 +200,7 @@
     <!-- ------ our-mission----  -->
 
     <!-- ---- Start team ----  -->
-    <section class="team ">
+    <section class="team d-none">
         <div class="cnt-lg">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
@@ -428,14 +428,14 @@
                     <div class="left-txt">
                         <h3>Let's work together</h3>
                         <p>We can help bring your dream Project to life with ease.</p>
-                        <a href="#" class="btn btn-white"><span>Let's talk</span> <span><i
+                        <a href="contact-us.html" class="btn btn-white"><span>Let's talk</span> <span><i
                                     class="fa-solid fa-arrow-right"></i></span></a>
                     </div>
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
                             <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
                     </div>
@@ -444,22 +444,22 @@
             <div class="footer-bottom">
                 <div class="flex justify-content-between">
                     <div class="ft-logo">
-                        <div class="img">
+                        <a href="index.html" class="img">
                             <img src="img/logo.svg" alt="">
-                        </div>
+                        </a>
                     </div>
                     <div class="menu-list">
                         <ul>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">About Us</a></li>
+                            <li><a href="service.html">Services</a></li>
+                            <li><a href="project.html">Projects</a></li>
+                            <li><a href="about-us.html">About Us</a></li>
                             <!-- <li><a href="#">FAQs</a></li> -->
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="numb">
                         <p><img src="img/icons/circle.svg" alt="">
-                            +23323137347632
+                            info@apex.com
                         </p>
                     </div>
                 </div>
