Add Some Section

--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="img/logo.svg" class="img-fluid" alt="">
@@ -410,11 +410,19 @@
             </div>
         </div>
         <div class="cnt-lg">
-            <div class="flex img justify-content-lg-between justify-content-center text-center">
+
+            <div class="flex img logo-slider">
+                <img src="img/logo/lg-01.png" alt="">
+                <img src="img/logo/lg-02.png" alt="">
+                <img src="img/logo/lg-03.png" alt="">
+                <img src="img/logo/lg-04.png" alt="">
+                <img src="img/logo/lg-05.png" alt="">
+                <img src="img/logo/lg-06.png" alt="">
                 <img src="img/logo/lg-07.png" alt="">
                 <img src="img/logo/lg-08.png" alt="">
                 <img src="img/logo/lg-09.png" alt="">
                 <img src="img/logo/lg-10.png" alt="">
+                <img src="img/logo/lg-11.png" alt="">
             </div>
         </div>
     </section>
@@ -434,7 +442,7 @@
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a href="mailto:info@apexinnovationtech.com"><i class="fa-solid fa-envelope"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
@@ -458,9 +466,9 @@
                         </ul>
                     </div>
                     <div class="numb">
-                        <p><img src="img/icons/circle.svg" alt="">
-                            info@apex.com
-                        </p>
+                        <a href="mailto:info@apexinnovationtech.com"><img src="img/icons/circle.svg" alt="">
+                            info@apexinnovationtech.com
+                        </a>
                     </div>
                 </div>
             </div>
