--- a/project.html
+++ b/project.html
@@ -931,7 +931,7 @@
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a href="mailto:info@apexinnovationtech.com"><i class="fa-solid fa-envelope"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
@@ -955,9 +955,9 @@
                         </ul>
                     </div>
                     <div class="numb">
-                        <p><img src="img/icons/circle.svg" alt="">
-                            info@apex.com
-                        </p>
+                        <a href="mailto:info@apexinnovationtech.com"><img src="img/icons/circle.svg" alt="">
+                            info@apexinnovationtech.com
+                        </a>
                     </div>
                 </div>
             </div>
