--- a/contact-us.html
+++ b/contact-us.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact us</title>
     <!-- ------ Bootstrap -----  -->
-        <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-        
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+
     <!-- ------ FontAwesome -----  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
@@ -110,27 +110,13 @@
                                 </div>
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <a href="#" class="btn">Send Inquiry <span><i class="fa fa-arrow-right"
-                                                    aria-hidden="true"></i></span></a>
+                                        <a href="mailto:info@apexinnovationtech.com" class="btn">Send Inquiry <span><i
+                                                    class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
                                     </div>
                                 </div>
                             </div>
                         </form>
 
-                        <div class="flex flex-loc">
-                            <div class="loc-wrap">
-                                <h4>Pakistan</h4>
-                                <p>Office # xyx Gulshan-e-Iqbal, Karachi</p>
-                                <a href="#" class="btn btn-outline">Get direction <span><i class="fa fa-arrow-right"
-                                            aria-hidden="true"></i></span></a>
-                            </div>
-                            <div class="loc-wrap">
-                                <h4>USA</h4>
-                                <p>5214 California Unit #11223,San Francisco, CA 943343</p>
-                                <a href="#" class="btn btn-outline">Get direction <span><i class="fa fa-arrow-right"
-                                            aria-hidden="true"></i></span></a>
-                            </div>
-                        </div>
                     </div>
 
                 </div>
@@ -142,18 +128,45 @@
                             </div>
                             <div class="txt">
                                 <p>have a project in mind? send a message.</p>
-                                <a href="mailto:info@examples.com">info@apex.com</a>
+                                <a href="mailto:info@apexinnovationtech.com">info@apexinnovationtech.com</a>
                             </div>
                         </div>
-                        <div class="detail-wrap flex d-none">
+                        <div class="detail-wrap numbs flex">
                             <div class="icon">
                                 <img src="img/icons/phone.svg" alt="">
                             </div>
                             <div class="txt">
                                 <p>We’re interested in working together</p>
-                                <a href="tel:">+(888)123 4567</a>
+                                <a href="tel:716-650-1597">716-650-1597</a><br>
+                                <a href="tel:716-650-1597">03143711915</a><br>
+                                <a href="https://api.whatsapp.com/send?phone=03143711915" class="whats">03143711915</a>
                             </div>
                         </div>
+
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="loc-wrap">
+                        <h4>Pakistan</h4>
+                        <p>A440 oppt to amna masjid block 5 Gulshan e Iqbal karachi</p>
+                    </div>
+                    <div class="map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1075.7651899541536!2d67.08937384503122!3d24.91747294637507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33f325a926e63%3A0x8f8b790a6e6850a8!2sJamia%20Masjid%20Amna!5e0!3m2!1sen!2s!4v1680867140456!5m2!1sen!2s"
+                            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="loc-wrap">
+                        <h4>USA</h4>
+                        <p>5214 California Unit #11223,San Francisco, CA 943343</p>
+                    </div>
+                    <div class="map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.867647273188!2d-78.74155248514388!3d43.00212140230523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d376b6301d08f1%3A0x62907af4df22f96e!2sHopkins%20Rd%2C%20Williamsville%2C%20NY%2014221%2C%20USA!5e0!3m2!1sen!2s!4v1680867426861!5m2!1sen!2s"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -231,7 +244,7 @@
                     <h2>We worked with the world’s biggest brands and the most <span>innovative startups</span></h2>
                 </div>
             </div>
-            <div class="flex img justify-content-center">
+            <div class="flex img">
                 <img src="img/logo/lg-01.png" alt="">
                 <img src="img/logo/lg-02.png" alt="">
                 <img src="img/logo/lg-03.png" alt="">
@@ -249,7 +262,8 @@
                 <div class="txt">
                     <h6>Get in touch</h6>
                     <h4>Rescue your company’s growth!</h4>
-                    <p>Let us know about your business plans on an introductory call, and we’ll lead the matching process.</p>
+                    <p>Let us know about your business plans on an introductory call, and we’ll lead the matching
+                        process.</p>
                 </div>
                 <div class="grow-btn">
                     <a href="contact-us.html" class="btn">Free Consultation</a>
@@ -272,7 +286,8 @@
                     <div class="right-social">
                         <p>Follow us</p>
                         <ul>
-                            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                            <li><a href="mailto:info@apexinnovationtech.com"><i class="fa-solid fa-envelope"></i></a>
+                            </li>
                             <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
                         </ul>
@@ -296,9 +311,9 @@
                         </ul>
                     </div>
                     <div class="numb">
-                        <p><img src="img/icons/circle.svg" alt="">
-                            info@apex.com
-                        </p>
+                        <a href="mailto:info@apexinnovationtech.com"><img src="img/icons/circle.svg" alt="">
+                            info@apexinnovationtech.com
+                        </a>
                     </div>
                 </div>
             </div>
