Add Some Section

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
     <!-- ---- end deal ----  -->
 
     <!-- ---- start client -----  -->
-    <section class="client">
+    <section class="client d-none">
         <div class="container">
             <div class="title_sec">
                 <h2>What does our <span>clients</span> say</h2>
