--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         </div>
     </section>
     <!-- ---- end client -----  -->
-
+<section class="space"></section>
     <!-- ---- start footer ----  -->
     <footer>
         <div class="container">
